inst/shiny/www/styles/partials/_sidebar.scss
/* Left nav sidebar only (Data / Exploration / NCA / TLG / About) */
.bslib-page-sidebar > .bslib-sidebar-layout {
  --_sidebar-width: 150px !important;
}

/* Left nav sidebar: no padding (nav pills handle their own spacing) */
.bslib-page-sidebar > .bslib-sidebar-layout > .sidebar .sidebar-content {
  padding-left: 0 !important;
  padding-right: 0 !important;
  display: flex !important;
  flex-direction: column !important;
  height: 100% !important;
}

/* Right-side sidebars: width and padding */
.sidebar-right {
  --_sidebar-width: 221px !important;
}

.sidebar-right > .sidebar .sidebar-content {
  padding-left: 0.75rem !important;
  padding-right: 0.75rem !important;
}

.sidebar .sidebar-content .row > :nth-child(2) {
  display: none;
}

.sidebar .sidebar-content .row {
  flex: 1;
  display: flex !important;
  flex-direction: column !important;
}

.sidebar .sidebar-content .row > :first-child {
  width: 100%;
  flex: 1;
  display: flex !important;
  flex-direction: column !important;
  padding-left: 0;
  padding-right: 0;
}

.sidebar .sidebar-content .row > :first-child > ul {
  flex: 1;
  display: flex !important;
  flex-direction: column !important;
}

.sidebar .sidebar-content .row > :first-child > ul > li:last-child {
  margin-top: auto;
}

.sidebar .sidebar-content .row > :first-child > ul > li > a {
  padding-left: 30px;
  padding-right: 30px;
  color: $anca-black-2;
}

.sidebar .sidebar-content .row > :first-child > ul > li > a.active {
  background-color: $anca-blue-light;
  color: $anca-black-2;
}

.sidebar .sidebar-content .row > :first-child > ul > li > a.disabled {
  color: $grey-3;
}

